--- a/views/index.pug
+++ b/views/index.pug
@@ -5,9 +5,9 @@ html
     body 
         h1 Hello World
 
-
+        h3 SignUp
         div(class="formContainer")
-            form(action="/addUser", method="post" class="formActual")
+            form(action="/addUser", method="post" class="userForms")
                 label(for="email") Email Address
                 input(type="email" name="email" id="email" placeholder="test@test.com")
                 label(for="password") Enter a Password
@@ -21,3 +21,12 @@ html
             ul
                 each error in errors
                     li #{ error.msg }
+        
+        h3 Login
+        div(class="formContainer")
+            form(action="/loginUser", method="post" class="userForms")
+                label(form="email") Email Address
+                input(type="email" name="email" id="email" placeholder="test@test.com")
+                label(for="password") Enter a Password
+                input(type="password" name="password" id="password" placeholder="abc123")
+                button(type="submit" class="formBsutton") Submit User
