--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,9 @@ html
         link(rel="stylesheet", href="/styles.css")
     body 
         h1 Hello World
-
+        if user
+            h2 Hello #{user.name}
+            a(href="/logout") LogOut
         h3 SignUp
         div(class="formContainer")
             form(action="/addUser", method="post" class="userForms")
