--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,70 @@
 include ./partials/navbar.pug
-h1 Hello World
+    h1 Hello World
 
-if user
-    h2 #{user.name}
+    if user
+        h2 #{user.name}
 
 
-        
+
+    ul 
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
+        li test
