--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -14,5 +14,6 @@ html
                     a(href="/users") Log In
                     a(href="/users/signUp") Sign Up
                 
-
-        block content
+    
+        div(class="mainDivContainer")
+            block content
