--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,9 @@ h1 Hello World
 
 if user
     h2 #{user.name}
+    br
+    hr
+    a(href="/addFile") Add a file? 
 
     br
     div(class="fileTree")
